--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -13,14 +13,15 @@ build:
      # nodejs: "18"
      # rust: "1.64"
 
+sphinx:
+  configuration: docs/conf.py
+  # Default lang
+  default_language: ru
+  # List of langs to deploy
+  languages:
+    - en
+
 python:
    install:
    - requirements: docs/requirements.txt
    
-sphinx:
-  configuration: docs/conf.py
-  # Укажите язык по умолчанию (будет доступен по основному URL)
-  default_language: ru
-  # СПИСОК всех языков, которые нужно собрать
-  languages:
-    - en
