--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -19,3 +19,8 @@ python:
 #formats:
 #  - htmlzip
 #  - pdf
+
+build:
+  jobs:
+    post_build:
+      - sphinx-build -b html -D language=en docs/ _build/en
