--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,13 +8,12 @@ build:
      # nodejs: "18"
      # rust: "1.64"
 
+languages:
+  - ru
+  - en
 
 sphinx:
   configuration: docs/conf.py
-  # НАСТРОЙКИ ЯЗЫКОВ - САМОЕ ВАЖНОЕ!
-  default_language: ru           # Язык по умолчанию
-  languages:                     # Все языки для сборки
-    - en                         # Английский
 
 python:
    install:
