--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -3,21 +3,30 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.11"
+    python: "3.12"
      # You can also specify other tool versions:
      # nodejs: "18"
      # rust: "1.64"
 
+python:
+   install:
+   - requirements: docs/requirements.txt
+
+# Языковые настройки
+language:
+  name: russian
+  code: ru
+  default: true
+  slug: ru
+  direction: ltr
+
+# Список всех поддерживаемых языков
 languages:
   - ru
   - en
 
 sphinx:
   configuration: docs/conf.py
-
-python:
-   install:
-   - requirements: docs/requirements.txt
  
 # Build PDF & ePub
 #formats:
