--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -12,3 +12,8 @@ python:
   install:
     - requirements: docs/requirements.txt
 
+build:
+  commands:
+    - echo "Building documentation..."
+    - pip install -r docs/requirements.txt
+    - sphinx-build -b html docs/ _build/html/
